
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct mmap_entry {unsigned long start; unsigned long end; unsigned int flags; } ;
typedef int (* mmap_callback ) (struct mmap_entry*,void*) ;


 int EXIT_FAILURE ;
 int MAX_MMAPS_PER_TASK ;
 int O_VM_AREA_STRUCT_VM_END ;
 int O_VM_AREA_STRUCT_VM_FLAGS ;
 int O_VM_AREA_STRUCT_VM_NEXT ;
 int O_VM_AREA_STRUCT_VM_START ;
 unsigned long TASK_SIZE ;
 int assert (int) ;
 int exit (int ) ;
 int info (char*) ;
 unsigned int read_field_4 (unsigned long,int ) ;
 unsigned long read_field_8 (unsigned long,int ) ;

__attribute__((used)) static void for_each_mmap_from(unsigned long mmap, mmap_callback callback,
    void *private) {
 struct mmap_entry entries[MAX_MMAPS_PER_TASK];
 int i, count;

 count = 0;
 while (mmap != 0) {
  assert(count < MAX_MMAPS_PER_TASK);
  unsigned long vm_start =
   read_field_8(mmap, O_VM_AREA_STRUCT_VM_START);
  unsigned long vm_end =
   read_field_8(mmap, O_VM_AREA_STRUCT_VM_END);
  if (vm_start >= TASK_SIZE || vm_end >= TASK_SIZE) {
   info("[-] bad mmap (did the task die?)\n");
   exit(EXIT_FAILURE);
  }
  unsigned vm_flags =
   read_field_4(mmap, O_VM_AREA_STRUCT_VM_FLAGS);
  entries[count].start = vm_start;
  entries[count].end = vm_end;
  entries[count].flags = vm_flags;
  count++;
  mmap = read_field_8(mmap, O_VM_AREA_STRUCT_VM_NEXT);
 }

 for (i = 0; i < count; i++)
  callback(&entries[i], private);
}
